--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,9 +45,9 @@
          style="text-align: center;display: none;background: #F1EDED;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
 </section>
 
-{#<script src="{% static 'rtc/dist/RTCMultiConnection.min.js' %}"></script>#}
-{#<script src="{% static 'node_modules/webrtc-adapter/out/adapter.js' %}"></script>#}
+
 <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.min.js"></script>
+<script src="{% static 'node_modules/webrtc-adapter/out/adapter.js' %}"></script>
 <script src="https://rtcmulticonnection.herokuapp.com/socket.io/socket.io.js"></script>
 
 <!-- custom layout for HTML5 audio/video elements -->
