--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -247,7 +247,7 @@
         var width = parseInt(connection.videosContainer.clientWidth / 3) - 20;
         var mediaElement = getHTMLMediaElement(video, {
             title: event.userid,
-            buttons: ['mute-audio', 'mute-video', 'full-screen', 'volume-slider'],
+            buttons: ['mute-audio', 'full-screen'],
             width: width,
             showOnMouseEnter: false
         });
