--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -236,7 +236,7 @@
             video.setAttribute('playsinline', true);
         }
 
-        if (event.type === 'local') {ns#medi
+        if (event.type === 'local') {
             video.volume = 0;
             try {
                 video.setAttributeNode(document.createAttribute('muted'));
